# Windows-

./: .gitignore  README.md  RELEASE_CHECKLIST.md  build_release.ps1  config.example.toml  config.toml  create_desktop_shortcut.ps1  create_startup_shortcut.ps1  launch_app.bat  problem.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logging_utils.py  main.py  protocol.py  session_recorder.py  storage.py
app/audio/: __init__.py  buffer.py  capture.py  processing.py  vad.py
app/providers/: __init__.py  base.py  cloud_provider.py  factory.py  mock_provider.py  offline_local_provider.py  offline_translate_provider.py  tencent_provider.py
app/server/: app.py  session.py
app/ui/: client.py  main_window.py  overlay_window.py  settings_dialog.py
app/utils/: __init__.py  retry.py
data/: history.db
tests/integration/: test_ws_flow.py
tests/unit/: test_offline_provider.py  test_offline_translate_provider.py  test_processing.py  test_protocol.py  test_provider_factory.py  test_retry.py  test_session_recorder.py  test_session_runtime_switch.py  test_vad.py
