[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-translator-desktop"
version = "0.1.0"
description = "Windows real-time system-audio translator with desktop subtitles."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.24.4",
    "pydantic>=2.8.0",
    "pyinstaller>=6.10.0",
    "PySide6>=6.5.0",
    "sounddevice>=0.5.1",
    "soundcard>=0.4.3",
    "eval_type_backport>=0.2.0; python_version<'3.10'",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
    "tencentcloud-sdk-python-common>=3.1.55",
    "tencentcloud-sdk-python-asr>=3.1.51",
    "tencentcloud-sdk-python-tmt>=3.1.54",
    "uvicorn>=0.30.6",
    "websockets>=12.0",
]

[project.optional-dependencies]
offline_translate = [
    "argostranslate>=1.9.6",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
